--- a/src/css/quiz.css
+++ b/src/css/quiz.css
@@ -1,25 +1,28 @@
-/* .quiz-container {
+.quiz-container {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
-  align-content: space-between;
-} */
+}
 
 .quiz-item {
-  margin: 0 40px;
+  margin: 0 40px 20px 40px;
+  flex: 25%;
 }
 
 .star-row {
   padding: 50px 0;
 }
 
+@media (max-width: 800px) {
+  .quiz-item {
+    flex: 50%;
+  }
+}
 
-/* .quiz-item:nth-child(2n)::after {
-  content: '';
-  width: 100%;
-  break-after: always;
-} */
-
-/* .quiz-item:nth-child(2n) > div {
-  background: gold;
-} */
+.info-text-header {
+  margin-top: 40px;
+  border-radius: 25px;
+  padding: 0 20px;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+}
