--- a/src/css/story.css
+++ b/src/css/story.css
@@ -6,18 +6,57 @@
   left: 0;
 }
 
-.image1 {
-  position: relative;
-  top: 0;
-  left: 0;
-}
-
-.image2 {
-  position: absolute;
-  top: 160px;
-  left: 200px;
-}
-
 .image {
   position: absolute;
+}
+
+.background-img-icon {
+  position: absolute;
+  top: 1.5%;
+  left: 95%;
+}
+
+.background-img {
+  max-height: 400px;
+  max-width: 600px;
+  margin: 0 0 20px 0;
+}
+
+.expanded {
+  max-height: 900px;
+  max-width: 900px;
+}
+
+@media (max-width: 800px) {
+  .background-img {
+    max-width: 300px;
+  }
+}
+
+.highlighted {
+  background-color: #FFFF00;
+}
+
+.story-text {
+  font-size: 28px;
+  font-family: 'Comic Sans MS', 'Comic Sans', serif;
+  max-height: 240px;
+  overflow: auto;
+}
+
+.expanded-height {
+  max-height: 800px;
+}
+
+.story-icon {
+  flex-shrink: 0.1;
+  align-self: start;
+}
+
+.shrink {
+  color: #ffbe2f;
+}
+
+.expand {
+  color: #27ca41;
 }
